--- a/main.cfg
+++ b/main.cfg
@@ -5,7 +5,11 @@
 /* need to use the CSL module to generate the CSL code */
 var CSL = xdc.useModule('ti.mcu.msp430.csl.CSL');
 var RTC_B = xdc.useModule('ti.mcu.msp430.csl2.rtc.RTC_B');
+var EUSCI_A1 = xdc.useModule('ti.mcu.msp430.csl2.communication.EUSCI_A1');
 var EUSCI_B0 = xdc.useModule('ti.mcu.msp430.csl2.communication.EUSCI_B0');
+var EUSCI_A0 = xdc.useModule('ti.mcu.msp430.csl2.communication.EUSCI_A0');
+var Timer1_A3 = xdc.useModule('ti.mcu.msp430.csl2.timer.Timer1_A3');
+var PMM = xdc.useModule('ti.mcu.msp430.csl2.pmm.PMM');
 CSL.configApiVersion = "1.30.00";  /* 1.30 added the PinMux module */
 
 /* these modules should be part of every project */
@@ -27,7 +31,7 @@ System.srRegs.SR.GIE = System.srDefs.GIE;
 CSL.device.vcc = 3.3;
 CS.clockMode = xdc.module("ti.mcu.msp430.csl2.clock.IClock").ClockConfigMode;
 CS.regs.XT1CLKHz = 32768.0;
-PinMux.assignedPins = "P1.3 EUSCI_B0_SPI,P1.6 EUSCI_B0_SPI,P2.2 EUSCI_B0_SPI,PJ.4 LFXIN,PJ.5 LFXOUT";
+PinMux.assignedPins = "P1.3 EUSCI_B0_SPI,P1.5 EUSCI_A0_SPI,P1.6 EUSCI_B0_SPI,P1.7 EUSCI_B0_SPI,P2.0 EUSCI_A0_SPI,P2.1 EUSCI_A0_SPI,P2.2 EUSCI_B0_SPI,P2.3 EUSCI_A1_SPI,P2.4 EUSCI_A1_SPI,P2.5 EUSCI_A1_SPI,PJ.4 LFXIN,PJ.5 LFXOUT";
 PinMux.regs.pjsel0 = 48;
 CS.csAclkSource = CS.CSA_LFXTCLK_SELECT;
 CS.csSmclkSrcDivider = CS.CSA_CLOCK_DIVIDER_2;
@@ -37,13 +41,47 @@ RTC_B.rtcCalendar.hours = 12;
 RTC_B.rtcCalendarDateMonth = RTC_B.RTC_CALENDARDATE_MONTH_AUGUST;
 RTC_B.rtcCalendar.dayOfMonth = 5;
 RTC_B.rtcCalendar.year = 2015;
+PinMux.regs.p1sel1 = 232;
+PinMux.regs.p2sel1 = 63;
+EUSCI_A1.eusciMode = EUSCI_A1.eusciBaseDefs.SPIMode;
+EUSCI_A1.eusciSPI.eusciSPIBitRate = EUSCI_A1.eusciSPIDefs.SPIBitRate_6;
+EUSCI_A1.eusciSPI.eusciSPIMode = EUSCI_A1.eusciSPIDefs.MasterMode_4Wire;
+EUSCI_A1.eusciSPI.eusciSPIPin[3] = 1;
+EUSCI_A1.eusciSPI.eusciSPIPin[2] = 1;
+EUSCI_A1.eusciSPI.eusciSPIPin[0] = 1;
+EUSCI_A1.eusciSPI.eusciSPISBSel = EUSCI_A1.eusciSPIDefs.eSPI_MSB_FIRST;
+EUSCI_A1.eusciSPI.eusciSPIClockPhase = EUSCI_A1.eusciSPIDefs.eSPI_PHASE_DATA_CAPTURED_ONFIRST_CHANGED_ON_NEXT;
+EUSCI_A1.eusciSPI.eusciSPISTEMode = EUSCI_A1.eusciSPIDefs.SPISTEMode_1;
 EUSCI_B0.eusciMode = EUSCI_B0.eusciBaseDefs.SPIMode;
+EUSCI_B0.eusciSPI.eusciSPIClockSource = EUSCI_B0.eusciSPIDefs.eSPI_CLOCKSOURCE_SMCLK;
+EUSCI_B0.eusciSPI.eusciSPIBitRate = EUSCI_B0.eusciSPIDefs.SPIBitRate_7;
 EUSCI_B0.eusciSPI.eusciSPIMode = EUSCI_B0.eusciSPIDefs.MasterMode_4Wire;
+EUSCI_B0.eusciSPI.eusciSPISTEMode = EUSCI_B0.eusciSPIDefs.SPISTEMode_1;
 EUSCI_B0.eusciSPI.eusciSPIPin[3] = 1;
-PinMux.regs.p1sel1 = 72;
 EUSCI_B0.eusciSPI.eusciSPIPin[2] = 1;
+EUSCI_B0.eusciSPI.eusciSPIPin[1] = 1;
 EUSCI_B0.eusciSPI.eusciSPIPin[0] = 1;
-PinMux.regs.p2sel1 = 4;
-EUSCI_B0.eusciSPI.eusciSPIBitRate = EUSCI_B0.eusciSPIDefs.SPIBitRate_6;
 EUSCI_B0.eusciSPI.eusciSPISBSel = EUSCI_B0.eusciSPIDefs.eSPI_MSB_FIRST;
 EUSCI_B0.eusciSPI.eusciSPIClockPhase = EUSCI_B0.eusciSPIDefs.eSPI_PHASE_DATA_CAPTURED_ONFIRST_CHANGED_ON_NEXT;
+EUSCI_A0.eusciMode = EUSCI_A0.eusciBaseDefs.SPIMode;
+EUSCI_A0.eusciSPI.eusciSPIBitRate = EUSCI_A0.eusciSPIDefs.SPIBitRate_7;
+EUSCI_A0.eusciSPI.eusciSPIPin[0] = 1;
+EUSCI_A0.eusciSPI.eusciSPIPin[1] = 1;
+EUSCI_A0.eusciSPI.eusciSPIPin[2] = 1;
+EUSCI_A0.eusciSPI.eusciSPISBSel = EUSCI_A0.eusciSPIDefs.eSPI_MSB_FIRST;
+EUSCI_A0.eusciSPI.eusciSPIClockPhase = EUSCI_A0.eusciSPIDefs.eSPI_PHASE_DATA_CAPTURED_ONFIRST_CHANGED_ON_NEXT;
+Timer1_A3.timerMode = xdc.module("ti.mcu.msp430.csl2.timer.ITimer").IntervalMode;
+Timer1_A3.regs.interruptSource[1].interruptEnable = false;
+Timer1_A3.regs.interruptSource[1].interruptHandler = true;
+Timer1_A3.intervalModeAdvanced = true;
+Timer1_A3.regs.interruptSource[0].interruptEnable = false;
+Timer1_A3.regs.interruptSource[0].interruptHandler = true;
+Timer1_A3.regs.interruptSource[2].interruptHandler = true;
+Timer1_A3.regs.interruptSource[3].interruptHandler = true;
+Timer1_A3.TACTL.timerClockSource = xdc.module("ti.mcu.msp430.csl2.timer.ITimer_A").TIMERA_CLOCKSOURCE_SMCLK;
+Timer1_A3.inputClockToTimer = 4000.0;
+Timer1_A3.intervalDesiredPeriod = 0.01;
+Timer1_A3.intervalModeActive = true;
+Timer1_A3.pwmDesiredFrequency = 100000.0;
+Timer1_A3.compareValue[0] = 39;
+PMM.showUserModePage = false;
