Configure the timer to output a square signal for GSCLK.

--- a/main.cfg
+++ b/main.cfg
@@ -8,8 +8,8 @@ var RTC_B = xdc.useModule('ti.mcu.msp430.csl2.rtc.RTC_B');
 var EUSCI_A1 = xdc.useModule('ti.mcu.msp430.csl2.communication.EUSCI_A1');
 var EUSCI_B0 = xdc.useModule('ti.mcu.msp430.csl2.communication.EUSCI_B0');
 var EUSCI_A0 = xdc.useModule('ti.mcu.msp430.csl2.communication.EUSCI_A0');
-var Timer1_A3 = xdc.useModule('ti.mcu.msp430.csl2.timer.Timer1_A3');
 var PMM = xdc.useModule('ti.mcu.msp430.csl2.pmm.PMM');
+var Timer1_A3 = xdc.useModule('ti.mcu.msp430.csl2.timer.Timer1_A3');
 CSL.configApiVersion = "1.30.00";  /* 1.30 added the PinMux module */
 
 /* these modules should be part of every project */
@@ -31,7 +31,7 @@ System.srRegs.SR.GIE = System.srDefs.GIE;
 CSL.device.vcc = 3.3;
 CS.clockMode = xdc.module("ti.mcu.msp430.csl2.clock.IClock").ClockConfigMode;
 CS.regs.XT1CLKHz = 32768.0;
-PinMux.assignedPins = "P1.3 EUSCI_B0_SPI,P1.5 EUSCI_A0_SPI,P1.6 EUSCI_B0_SPI,P1.7 EUSCI_B0_SPI,P2.0 EUSCI_A0_SPI,P2.1 EUSCI_A0_SPI,P2.2 EUSCI_B0_SPI,P2.3 EUSCI_A1_SPI,P2.4 EUSCI_A1_SPI,P2.5 EUSCI_A1_SPI,PJ.4 LFXIN,PJ.5 LFXOUT";
+PinMux.assignedPins = "P1.2 Timer1_A3,P1.3 EUSCI_B0_SPI,P1.5 EUSCI_A0_SPI,P1.6 EUSCI_B0_SPI,P1.7 EUSCI_B0_SPI,P2.0 EUSCI_A0_SPI,P2.1 EUSCI_A0_SPI,P2.2 EUSCI_B0_SPI,P2.3 EUSCI_A1_SPI,P2.4 EUSCI_A1_SPI,P2.5 EUSCI_A1_SPI,PJ.4 LFXIN,PJ.5 LFXOUT";
 PinMux.regs.pjsel0 = 48;
 CS.csAclkSource = CS.CSA_LFXTCLK_SELECT;
 CS.csSmclkSrcDivider = CS.CSA_CLOCK_DIVIDER_2;
@@ -70,18 +70,21 @@ EUSCI_A0.eusciSPI.eusciSPIPin[1] = 1;
 EUSCI_A0.eusciSPI.eusciSPIPin[2] = 1;
 EUSCI_A0.eusciSPI.eusciSPISBSel = EUSCI_A0.eusciSPIDefs.eSPI_MSB_FIRST;
 EUSCI_A0.eusciSPI.eusciSPIClockPhase = EUSCI_A0.eusciSPIDefs.eSPI_PHASE_DATA_CAPTURED_ONFIRST_CHANGED_ON_NEXT;
-Timer1_A3.timerMode = xdc.module("ti.mcu.msp430.csl2.timer.ITimer").IntervalMode;
-Timer1_A3.regs.interruptSource[1].interruptEnable = false;
-Timer1_A3.regs.interruptSource[1].interruptHandler = true;
+PMM.showUserModePage = false;
+Timer1_A3.timerMode = xdc.module("ti.mcu.msp430.csl2.timer.ITimer").PWMMode;
+Timer1_A3.ccrOutputPin[1] = 1;
+Timer1_A3.ccrOutputPinAssigned[1] = true;
+Timer1_A3.PWMModeActive = true;
+Timer1_A3.compareValue[1] = 79;
+Timer1_A3.TACCTL1.timerOutputMode = xdc.module("ti.mcu.msp430.csl2.timer.ITimer_A").TIMERA_OUTPUTMODE_RESET_SET;
+Timer1_A3.pwmDesiredFrequency = 25000.0;
+Timer1_A3.intervalDesiredPeriod = 0.04;
+Timer1_A3.compareValue[0] = 159;
 Timer1_A3.intervalModeAdvanced = true;
-Timer1_A3.regs.interruptSource[0].interruptEnable = false;
-Timer1_A3.regs.interruptSource[0].interruptHandler = true;
-Timer1_A3.regs.interruptSource[2].interruptHandler = true;
-Timer1_A3.regs.interruptSource[3].interruptHandler = true;
 Timer1_A3.TACTL.timerClockSource = xdc.module("ti.mcu.msp430.csl2.timer.ITimer_A").TIMERA_CLOCKSOURCE_SMCLK;
 Timer1_A3.inputClockToTimer = 4000.0;
-Timer1_A3.intervalDesiredPeriod = 0.01;
-Timer1_A3.intervalModeActive = true;
-Timer1_A3.pwmDesiredFrequency = 100000.0;
-Timer1_A3.compareValue[0] = 39;
-PMM.showUserModePage = false;
+Timer1_A3.TACTL.timerClockSourceDivider = xdc.module("ti.mcu.msp430.csl2.timer.ITimer_A").TIMERA_CLOCKSOURCE_DIVIDER_4;
+Timer1_A3.TACTL.timerMode = xdc.module("ti.mcu.msp430.csl2.timer.ITimer_A").TIMERA_UP_MODE;
+PinMux.regs.p1dir = 4;
+PinMux.regs.p1sel0 = 4;
+Timer1_A3.regs.interruptSource[0].interruptHandler = true;
