Change GSCLK line to run from ACLK instead of SMCLK.

--- a/main.cfg
+++ b/main.cfg
@@ -75,12 +75,12 @@ Timer1_A3.timerMode = xdc.module("ti.mcu.msp430.csl2.timer.ITimer").PWMMode;
 Timer1_A3.ccrOutputPin[1] = 1;
 Timer1_A3.ccrOutputPinAssigned[1] = true;
 Timer1_A3.PWMModeActive = true;
-Timer1_A3.compareValue[1] = 79;
+Timer1_A3.compareValue[1] = 1;
 Timer1_A3.TACCTL1.timerOutputMode = xdc.module("ti.mcu.msp430.csl2.timer.ITimer_A").TIMERA_OUTPUTMODE_RESET_SET;
-Timer1_A3.pwmDesiredFrequency = 25000.0;
-Timer1_A3.intervalDesiredPeriod = 0.04;
-Timer1_A3.compareValue[0] = 159;
-Timer1_A3.intervalModeAdvanced = true;
+Timer1_A3.pwmDesiredFrequency = 10869.57;
+Timer1_A3.intervalDesiredPeriod = 0.092;
+Timer1_A3.compareValue[0] = 2;
+Timer1_A3.intervalModeAdvanced = false;
 Timer1_A3.TACTL.timerClockSource = xdc.module("ti.mcu.msp430.csl2.timer.ITimer_A").TIMERA_CLOCKSOURCE_SMCLK;
 Timer1_A3.inputClockToTimer = 4000.0;
 Timer1_A3.TACTL.timerClockSourceDivider = xdc.module("ti.mcu.msp430.csl2.timer.ITimer_A").TIMERA_CLOCKSOURCE_DIVIDER_4;
