So-far unsuccessful transition from bit-banging LEDs.

--- a/main.cfg
+++ b/main.cfg
@@ -29,7 +29,7 @@ Program.argSize = 0;
 System.srRegs.SR.GIE = System.srDefs.GIE;
 CS.clockMode = xdc.module("ti.mcu.msp430.csl2.clock.IClock").ClockConfigMode;
 CS.regs.XT1CLKHz = 32768.0;
-PinMux.assignedPins = "P1.0 GPIO,P1.1 GPIO,P1.2 Timer1_A3,P1.3 GPIO,P1.4 GPIO,P1.5 GPIO,P1.6 EUSCI_B0_SPI,P1.7 EUSCI_B0_SPI,P2.0 GPIO,P2.1 GPIO,P2.2 EUSCI_B0_SPI,P2.3 EUSCI_A1_SPI,P2.4 EUSCI_A1_SPI,P2.5 EUSCI_A1_SPI,P2.6 GPIO,P2.7 GPIO,P3.0 GPIO,P3.1 GPIO,P3.2 GPIO,P3.4 GPIO,P3.5 GPIO,P3.6 GPIO,PJ.4 LFXIN,PJ.5 LFXOUT";
+PinMux.assignedPins = "P1.0 GPIO,P1.1 GPIO,P1.2 Timer1_A3,P1.3 GPIO,P1.4 GPIO,P1.5 EUSCI_A0_SPI,P1.6 EUSCI_B0_SPI,P1.7 EUSCI_B0_SPI,P2.0 EUSCI_A0_SPI,P2.1 EUSCI_A0_SPI,P2.2 EUSCI_B0_SPI,P2.3 EUSCI_A1_SPI,P2.4 EUSCI_A1_SPI,P2.5 EUSCI_A1_SPI,P2.6 GPIO,P2.7 GPIO,P3.0 GPIO,P3.1 GPIO,P3.2 GPIO,P3.4 GPIO,P3.5 GPIO,P3.6 GPIO,PJ.4 LFXIN,PJ.5 LFXOUT";
 PinMux.regs.pjsel0 = 48;
 CS.csAclkSource = CS.CSA_LFXTCLK_SELECT;
 CS.csMclkSrcDivider = CS.CSA_CLOCK_DIVIDER_2;
@@ -37,7 +37,7 @@ EUSCI_A1.eusciMode = EUSCI_A1.eusciBaseDefs.SPIMode;
 CS.csSmclkSrcDivider = CS.CSA_CLOCK_DIVIDER_2;
 EUSCI_A1.eusciSPI.eusciSPIBitRate = EUSCI_A1.eusciSPIDefs.SPIBitRate_7;
 EUSCI_A1.eusciSPI.eusciSPIPin[0] = 1;
-PinMux.regs.p2sel1 = 60;
+PinMux.regs.p2sel1 = 63;
 EUSCI_A1.eusciSPI.eusciSPIPin[2] = 1;
 EUSCI_A1.eusciSPI.eusciSPIMode = EUSCI_A1.eusciSPIDefs.MasterMode_4Wire;
 EUSCI_A1.eusciSPI.eusciSPIPin[3] = 1;
@@ -45,11 +45,11 @@ EUSCI_A1.eusciSPI.eusciSPISBSel = EUSCI_A1.eusciSPIDefs.eSPI_MSB_FIRST;
 EUSCI_A1.eusciSPI.eusciSPIClockPhase = EUSCI_A1.eusciSPIDefs.eSPI_PHASE_DATA_CAPTURED_ONFIRST_CHANGED_ON_NEXT;
 CSL.device.vcc = 3.3;
 PMM.showUserModePage = false;
-PinMux.regs.p2dir = 193;
+PinMux.regs.p2dir = 192;
 PinMux.regs.p2out = 0;
 EUSCI_A1.eusciSPI.eusciSPISTEMode = EUSCI_A1.eusciSPIDefs.SPISTEMode_1;
-PinMux.regs.p1sel1 = 192;
-PinMux.regs.p1dir = 63;
+PinMux.regs.p1sel1 = 224;
+PinMux.regs.p1dir = 31;
 PinMux.regs.p1sel0 = 4;
 CS.csAdvSettingsEnabled = false;
 CS.csXt1Bypass = false;
@@ -58,10 +58,10 @@ EUSCI_A1.eusciSPI.eusciSPICustomRate = 1000000;
 PinMux.regs.p3ren = 80;
 PinMux.regs.p3out = 80;
 EUSCI_A0.eusciMode = EUSCI_A0.eusciBaseDefs.SPIMode;
-EUSCI_A0.eusciSPI.eusciSPIBitRate = EUSCI_A0.eusciSPIDefs.SPIBitRate_6;
-EUSCI_A0.eusciSPI.eusciSPIPin[0] = 0;
-EUSCI_A0.eusciSPI.eusciSPIPin[1] = 0;
-EUSCI_A0.eusciSPI.eusciSPIPin[2] = 0;
+EUSCI_A0.eusciSPI.eusciSPIBitRate = EUSCI_A0.eusciSPIDefs.SPIBitRate_4;
+EUSCI_A0.eusciSPI.eusciSPIPin[0] = 1;
+EUSCI_A0.eusciSPI.eusciSPIPin[1] = 1;
+EUSCI_A0.eusciSPI.eusciSPIPin[2] = 1;
 EUSCI_A0.eusciSPI.eusciSPISBSel = EUSCI_A0.eusciSPIDefs.eSPI_MSB_FIRST;
 EUSCI_A0.eusciSPI.eusciSPIClockPhase = EUSCI_A0.eusciSPIDefs.eSPI_PHASE_DATA_CAPTURED_ONFIRST_CHANGED_ON_NEXT;
 PinMux.regs.p1out = 0;
@@ -91,15 +91,14 @@ EUSCI_B0.regs.interruptSource[12].interruptHandler = false;
 EUSCI_B0.regs.interruptSource[0].interruptEnable = false;
 EUSCI_B0.eusciSPI.eusciSPIMode = EUSCI_B0.eusciSPIDefs.MasterMode_3Wire;
 Timer1_A3.timerMode = xdc.module("ti.mcu.msp430.csl2.timer.ITimer").PWMMode;
+Timer1_A3.intervalModeAdvanced = true;
+Timer1_A3.TACTL.timerClockSource = xdc.module("ti.mcu.msp430.csl2.timer.ITimer_A").TIMERA_CLOCKSOURCE_SMCLK;
+Timer1_A3.inputClockToTimer = 4000.0;
 Timer1_A3.ccrOutputPin[1] = 1;
 Timer1_A3.ccrOutputPinAssigned[1] = true;
 Timer1_A3.PWMModeActive = true;
-Timer1_A3.compareValue[1] = 1;
+Timer1_A3.compareValue[1] = 9;
 Timer1_A3.TACCTL1.timerOutputMode = xdc.module("ti.mcu.msp430.csl2.timer.ITimer_A").TIMERA_OUTPUTMODE_RESET_SET;
-Timer1_A3.pwmDesiredFrequency = 10869.57;
-Timer1_A3.intervalDesiredPeriod = 0.092;
-Timer1_A3.compareValue[0] = 2;
-Timer1_A3.intervalModeAdvanced = false;
-Timer1_A3.TACTL.timerClockSource = xdc.module("ti.mcu.msp430.csl2.timer.ITimer_A").TIMERA_CLOCKSOURCE_ACLK;
-Timer1_A3.inputClockToTimer = 32.768;
-Timer1_A3.showExtClkSource = false;
+Timer1_A3.pwmDesiredFrequency = 200000.0;
+Timer1_A3.intervalDesiredPeriod = 0.005;
+Timer1_A3.compareValue[0] = 19;
