--- a/main.cfg
+++ b/main.cfg
@@ -55,16 +55,16 @@ CS.csAdvSettingsEnabled = false;
 CS.csXt1Bypass = false;
 CS.csXt1Drive = CS.LFXTDRIVE_2;
 EUSCI_A1.eusciSPI.eusciSPICustomRate = 1000000;
-PinMux.regs.p3ren = 80;
-PinMux.regs.p3out = 80;
+PinMux.regs.p3ren = 112;
+PinMux.regs.p3out = 113;
 EUSCI_A0.eusciMode = EUSCI_A0.eusciBaseDefs.SPIMode;
-EUSCI_A0.eusciSPI.eusciSPIBitRate = EUSCI_A0.eusciSPIDefs.SPIBitRate_4;
+EUSCI_A0.eusciSPI.eusciSPIBitRate = EUSCI_A0.eusciSPIDefs.SPIBitRate_7;
 EUSCI_A0.eusciSPI.eusciSPIPin[0] = 1;
 EUSCI_A0.eusciSPI.eusciSPIPin[1] = 1;
 EUSCI_A0.eusciSPI.eusciSPIPin[2] = 1;
 EUSCI_A0.eusciSPI.eusciSPISBSel = EUSCI_A0.eusciSPIDefs.eSPI_MSB_FIRST;
 EUSCI_A0.eusciSPI.eusciSPIClockPhase = EUSCI_A0.eusciSPIDefs.eSPI_PHASE_DATA_CAPTURED_ONFIRST_CHANGED_ON_NEXT;
-PinMux.regs.p1out = 0;
+PinMux.regs.p1out = 3;
 PinMux.regs.p3dir = 5;
 PinMux.regs.p2ren = 2;
 EUSCI_B0.eusciMode = EUSCI_B0.eusciBaseDefs.SPIMode;
@@ -102,3 +102,5 @@ Timer1_A3.TACCTL1.timerOutputMode = xdc.module("ti.mcu.msp430.csl2.timer.ITimer_
 Timer1_A3.pwmDesiredFrequency = 200000.0;
 Timer1_A3.intervalDesiredPeriod = 0.005;
 Timer1_A3.compareValue[0] = 19;
+PinMux.regs.p3ie = 0;
+PinMux.regs.p3ies = 0;
