Fix some light PWM, add a rotating rainbow demo.

--- a/main.cfg
+++ b/main.cfg
@@ -32,7 +32,7 @@ CS.regs.XT1CLKHz = 32768.0;
 PinMux.assignedPins = "P1.0 GPIO,P1.1 GPIO,P1.2 Timer1_A3,P1.3 GPIO,P1.4 GPIO,P1.5 EUSCI_A0_SPI,P1.6 EUSCI_B0_SPI,P1.7 EUSCI_B0_SPI,P2.0 EUSCI_A0_SPI,P2.1 EUSCI_A0_SPI,P2.2 EUSCI_B0_SPI,P2.3 EUSCI_A1_SPI,P2.4 EUSCI_A1_SPI,P2.5 EUSCI_A1_SPI,P2.6 GPIO,P2.7 GPIO,P3.0 GPIO,P3.1 GPIO,P3.2 GPIO,P3.4 GPIO,P3.5 GPIO,P3.6 GPIO,PJ.4 LFXIN,PJ.5 LFXOUT";
 PinMux.regs.pjsel0 = 48;
 CS.csAclkSource = CS.CSA_LFXTCLK_SELECT;
-CS.csMclkSrcDivider = CS.CSA_CLOCK_DIVIDER_2;
+CS.csMclkSrcDivider = CS.CSA_CLOCK_DIVIDER_4;
 EUSCI_A1.eusciMode = EUSCI_A1.eusciBaseDefs.SPIMode;
 CS.csSmclkSrcDivider = CS.CSA_CLOCK_DIVIDER_2;
 EUSCI_A1.eusciSPI.eusciSPIBitRate = EUSCI_A1.eusciSPIDefs.SPIBitRate_7;
@@ -93,14 +93,16 @@ EUSCI_B0.eusciSPI.eusciSPIMode = EUSCI_B0.eusciSPIDefs.MasterMode_3Wire;
 Timer1_A3.timerMode = xdc.module("ti.mcu.msp430.csl2.timer.ITimer").PWMMode;
 Timer1_A3.intervalModeAdvanced = true;
 Timer1_A3.TACTL.timerClockSource = xdc.module("ti.mcu.msp430.csl2.timer.ITimer_A").TIMERA_CLOCKSOURCE_SMCLK;
-Timer1_A3.inputClockToTimer = 4000.0;
+Timer1_A3.inputClockToTimer = 8000.0;
 Timer1_A3.ccrOutputPin[1] = 1;
 Timer1_A3.ccrOutputPinAssigned[1] = true;
 Timer1_A3.PWMModeActive = true;
-Timer1_A3.compareValue[1] = 9;
+Timer1_A3.compareValue[1] = 3;
 Timer1_A3.TACCTL1.timerOutputMode = xdc.module("ti.mcu.msp430.csl2.timer.ITimer_A").TIMERA_OUTPUTMODE_RESET_SET;
-Timer1_A3.pwmDesiredFrequency = 200000.0;
-Timer1_A3.intervalDesiredPeriod = 0.005;
-Timer1_A3.compareValue[0] = 19;
+Timer1_A3.pwmDesiredFrequency = 1000000.0;
+Timer1_A3.intervalDesiredPeriod = 0.001;
+Timer1_A3.compareValue[0] = 7;
 PinMux.regs.p3ie = 0;
 PinMux.regs.p3ies = 0;
+CS.csDcoRangeSel = CS.CSA_DCORSEL_1;
+CS.csDcoFreqSel = CS.CSA_DCOFSEL_4;
