--- a/img/frames.ini
+++ b/img/frames.ini
@@ -1,4 +1,5 @@
 [standing]
+persistent:
 1: 1,1,1
 
 [walking]
@@ -6,3 +7,16 @@
 2: 6,7,4
 3: 6,6,3
 4: 6,8,5
+
+[waving:in]
+persistent:
+1: 1,1,1
+2: 1,3,1
+
+[waving:loop]
+1: 2,4,1
+2: 2,3,1
+
+[waving:out]
+1: 1,3,1
+2: 1,1,1
