Refactor, to partially working time loop interrupts.

--- a/main.cfg
+++ b/main.cfg
@@ -9,6 +9,7 @@ var PMM = xdc.useModule('ti.mcu.msp430.csl2.pmm.PMM');
 var EUSCI_A0 = xdc.useModule('ti.mcu.msp430.csl2.communication.EUSCI_A0');
 var EUSCI_B0 = xdc.useModule('ti.mcu.msp430.csl2.communication.EUSCI_B0');
 var Timer1_A3 = xdc.useModule('ti.mcu.msp430.csl2.timer.Timer1_A3');
+var RTC_B = xdc.useModule('ti.mcu.msp430.csl2.rtc.RTC_B');
 CSL.configApiVersion = "1.30.00";  /* 1.30 added the PinMux module */
 
 /* these modules should be part of every project */
@@ -106,3 +107,16 @@ PinMux.regs.p3ie = 0;
 PinMux.regs.p3ies = 0;
 CS.csDcoRangeSel = CS.CSA_DCORSEL_1;
 CS.csDcoFreqSel = CS.CSA_DCOFSEL_4;
+CS.csMclkSource = CS.CSA_DCOCLK_SELECT;
+RTC_B.calendarModePage = true;
+RTC_B.rtcFormat = RTC_B.RTC_FORMAT_BCD;
+RTC_B.rtcCalendarDateMonth = RTC_B.RTC_CALENDARDATE_MONTH_AUGUST;
+RTC_B.rtcCalendar.dayOfMonth = 5;
+RTC_B.rtcCalendar.year = 2015;
+RTC_B.startClock = true;
+RTC_B.regs.interruptSource[3].interruptEnable = false;
+RTC_B.regs.interruptSource[3].interruptHandler = false;
+RTC_B.regs.interruptSource[0].interruptHandler = false;
+RTC_B.regs.interruptSource[1].interruptHandler = false;
+RTC_B.regs.interruptSource[2].interruptHandler = false;
+RTC_B.regs.interruptSource[2].interruptEnable = false;
