Iterate on the animation proof code.

--- a/main.cfg
+++ b/main.cfg
@@ -98,11 +98,11 @@ Timer1_A3.inputClockToTimer = 8000.0;
 Timer1_A3.ccrOutputPin[1] = 1;
 Timer1_A3.ccrOutputPinAssigned[1] = true;
 Timer1_A3.PWMModeActive = true;
-Timer1_A3.compareValue[1] = 3;
+Timer1_A3.compareValue[1] = 39;
 Timer1_A3.TACCTL1.timerOutputMode = xdc.module("ti.mcu.msp430.csl2.timer.ITimer_A").TIMERA_OUTPUTMODE_RESET_SET;
-Timer1_A3.pwmDesiredFrequency = 1000000.0;
-Timer1_A3.intervalDesiredPeriod = 0.001;
-Timer1_A3.compareValue[0] = 7;
+Timer1_A3.pwmDesiredFrequency = 100000.0;
+Timer1_A3.intervalDesiredPeriod = 0.01;
+Timer1_A3.compareValue[0] = 79;
 PinMux.regs.p3ie = 0;
 PinMux.regs.p3ies = 0;
 CS.csDcoRangeSel = CS.CSA_DCORSEL_1;
@@ -120,3 +120,4 @@ RTC_B.regs.interruptSource[0].interruptHandler = false;
 RTC_B.regs.interruptSource[1].interruptHandler = false;
 RTC_B.regs.interruptSource[2].interruptHandler = false;
 RTC_B.regs.interruptSource[2].interruptEnable = false;
+Timer1_A3.showExtClkSource = false;
