--- a/main.cfg
+++ b/main.cfg
@@ -36,7 +36,7 @@ CS.csAclkSource = CS.CSA_LFXTCLK_SELECT;
 CS.csMclkSrcDivider = CS.CSA_CLOCK_DIVIDER_4;
 EUSCI_A1.eusciMode = EUSCI_A1.eusciBaseDefs.SPIMode;
 CS.csSmclkSrcDivider = CS.CSA_CLOCK_DIVIDER_2;
-EUSCI_A1.eusciSPI.eusciSPIBitRate = EUSCI_A1.eusciSPIDefs.SPIBitRate_7;
+EUSCI_A1.eusciSPI.eusciSPIBitRate = EUSCI_A1.eusciSPIDefs.SPIBitRate_Custom;
 EUSCI_A1.eusciSPI.eusciSPIPin[0] = 1;
 PinMux.regs.p2sel1 = 63;
 EUSCI_A1.eusciSPI.eusciSPIPin[2] = 1;
@@ -55,7 +55,7 @@ PinMux.regs.p1sel0 = 4;
 CS.csAdvSettingsEnabled = false;
 CS.csXt1Bypass = false;
 CS.csXt1Drive = CS.LFXTDRIVE_2;
-EUSCI_A1.eusciSPI.eusciSPICustomRate = 1000000;
+EUSCI_A1.eusciSPI.eusciSPICustomRate = 4000000;
 PinMux.regs.p3ren = 112;
 PinMux.regs.p3out = 113;
 EUSCI_A0.eusciMode = EUSCI_A0.eusciBaseDefs.SPIMode;
