Move to a more interrupt-based TLC GS control.

--- a/main.cfg
+++ b/main.cfg
@@ -33,10 +33,10 @@ CS.regs.XT1CLKHz = 32768.0;
 PinMux.assignedPins = "P1.0 GPIO,P1.1 GPIO,P1.2 Timer1_A3,P1.3 GPIO,P1.4 GPIO,P1.5 EUSCI_A0_SPI,P1.6 EUSCI_B0_SPI,P1.7 EUSCI_B0_SPI,P2.0 EUSCI_A0_SPI,P2.1 EUSCI_A0_SPI,P2.2 EUSCI_B0_SPI,P2.3 EUSCI_A1_SPI,P2.4 EUSCI_A1_SPI,P2.5 EUSCI_A1_SPI,P2.6 GPIO,P2.7 GPIO,P3.0 GPIO,P3.1 GPIO,P3.2 GPIO,P3.4 GPIO,P3.5 GPIO,P3.6 GPIO,PJ.4 LFXIN,PJ.5 LFXOUT";
 PinMux.regs.pjsel0 = 48;
 CS.csAclkSource = CS.CSA_LFXTCLK_SELECT;
-CS.csMclkSrcDivider = CS.CSA_CLOCK_DIVIDER_4;
+CS.csMclkSrcDivider = CS.CSA_CLOCK_DIVIDER_2;
 EUSCI_A1.eusciMode = EUSCI_A1.eusciBaseDefs.SPIMode;
 CS.csSmclkSrcDivider = CS.CSA_CLOCK_DIVIDER_2;
-EUSCI_A1.eusciSPI.eusciSPIBitRate = EUSCI_A1.eusciSPIDefs.SPIBitRate_Custom;
+EUSCI_A1.eusciSPI.eusciSPIBitRate = EUSCI_A1.eusciSPIDefs.SPIBitRate_7;
 EUSCI_A1.eusciSPI.eusciSPIPin[0] = 1;
 PinMux.regs.p2sel1 = 63;
 EUSCI_A1.eusciSPI.eusciSPIPin[2] = 1;
