Handle tracking and 10- and 1-minute actions.

--- a/main.cfg
+++ b/main.cfg
@@ -121,3 +121,4 @@ RTC_B.regs.interruptSource[1].interruptHandler = false;
 RTC_B.regs.interruptSource[2].interruptHandler = false;
 RTC_B.regs.interruptSource[2].interruptEnable = false;
 Timer1_A3.showExtClkSource = false;
+RTC_B.rtcCalendarEvent = RTC_B.RTC_CALENDAREVENT_MINUTECHANGE;
