--- a/img/frames.ini
+++ b/img/frames.ini
@@ -1,22 +1,142 @@
 [standing]
-persistent:
 1: 1,1,1
 
-[walking]
-1: 6,6,3
-2: 6,7,4
-3: 6,6,3
-4: 6,8,5
+[walking:in]
+1: 9,11,6
 
-[waving:in]
-persistent:
-1: 1,1,1
-2: 1,3,1
+[walking:loop]
+1: 9,11,7
+2: 9,11,6
+3: 9,11,8
+4: 9,11,6
 
-[waving:loop]
-1: 2,4,1
-2: 2,3,1
+[walking:out]
+1: 9,11,6
 
-[waving:out]
-1: 1,3,1
+[walking_left:in]
+1: 10,14,9
+
+[walking_left:loop]
+1: 10,14,10
+2: 10,14,9
+3: 10,14,11
+4: 10,14,9
+
+[walking_left:out]
+1: 10,14,9
+
+[running:in]
+1: 9,11,6
+
+[running:loop]
+1: 9,11,12
+2: 9,11,12
+3: 9,11,6
+4: 9,11,13
+5: 9,11,13
+6: 9,11,6
+
+[running:out]
+1: 9,11,6
+
+[zombie:in]
+1: 13,1,1
+2: 13,7,1
+3: 11,10,6
+
+[zombie:loop]
+1: 11,17,7
+2: 11,17,6
+3: 11,17,8
+4: 11,17,6
+
+[zombie:out]
+1: 11,10,6
+2: 13,7,1
+3: 13,1,1
+
+[zombie_left:in]
+1: 13,1,1
+2: 13,10,1
+3: 12,18,9
+
+[zombie_left:loop]
+1: 12,18,10
+2: 12,18,9
+3: 12,18,11
+4: 12,18,9
+
+[zombie_left:out]
+1: 12,18,9
+2: 13,10,1
+3: 13,1,1
+
+[jump]
+1: 1,1,4
 2: 1,1,1
+3: 1,7,5 
+; <- First to shift up
+4: 1,6,5 
+; <- Shift up, down on this frame
+5: 1,7,5
+
+[march:in]
+1: 13,1,1
+
+[march:loop]
+2: 13,19,3
+3: 13,20,2
+
+[march:out]
+1: 13,1,1
+
+[exercise_1:in]
+1: 13,1,1
+
+[exercise_2:loop]
+1: 13,7,4
+1: 13,1,1
+
+[exercise_1:out]
+1: 13,1,1
+
+[flap_arms:in]
+1: 1,7,1
+
+[flap_arms:loop]
+1: 1,6,1
+2: 1,7,1
+
+[flap_arms:out]
+1: 1,7,1
+
+[silly]
+1: 8,1,1
+
+[bored_standing]
+1: 13,1,1
+
+[bored_arms:loop]
+1: 13,2,1
+2: 13,1,1
+3: 13,7,1
+4: 13,3,1
+5: 13,1,1
+
+[bored_crouch:loop]
+1: 13,1,4
+
+[bored_wave:loop]
+1: 13,3,1
+2: 13,8,1
+3: 13,6,1
+4: 13,9,1
+5: 13,8,1
+6: 13,6,1
+7: 13,9,1
+8: 13,2,1
+9: 13,1,1
+
+[bored_sad:loop]
+1: 2,1,1
+
