Update animations from Jonathan.

--- a/img/frames.ini
+++ b/img/frames.ini
@@ -93,7 +93,7 @@
 [exercise_1:in]
 1: 13,1,1
 
-[exercise_1:loop]
+[exercise_2:loop]
 1: 13,7,4
 1: 13,1,1
 
@@ -140,3 +140,22 @@
 [bored_sad:loop]
 1: 2,1,1
 
+[bored_yawn]
+1: 7,1,1
+2: 7,7,1
+3: 7,6,1
+4: 7,6,1
+5: 7,6,1
+6: 7,6,1
+7: 13,7,1
+8: 13,1,1
+
+[wave_right:in]
+1: 1,3,1
+
+[wave_right:loop]
+1: 1,5,1
+2: 1,3,1
+
+[wave_right:out]
+1: 1,1,1
