Fix some frames.ini issues.

--- a/img/frames.ini
+++ b/img/frames.ini
@@ -93,7 +93,7 @@
 [exercise_1:in]
 1: 13,1,1
 
-[exercise_2:loop]
+[exercise_1:loop]
 1: 13,7,4
 1: 13,1,1
 
@@ -116,17 +116,17 @@
 [bored_standing]
 1: 13,1,1
 
-[bored_arms:loop]
+[bored_arms]
 1: 13,2,1
 2: 13,1,1
 3: 13,7,1
 4: 13,3,1
 5: 13,1,1
 
-[bored_crouch:loop]
+[bored_crouch]
 1: 13,1,4
 
-[bored_wave:loop]
+[bored_wave]
 1: 13,3,1
 2: 13,8,1
 3: 13,6,1
@@ -137,7 +137,7 @@
 8: 13,2,1
 9: 13,1,1
 
-[bored_sad:loop]
+[bored_sad]
 1: 2,1,1
 
 [bored_yawn]
