--- a/img/frames.ini
+++ b/img/frames.ini
@@ -34,6 +34,7 @@ left5: 4
 1: 10,14,9
 
 [running:in]
+speed:2
 1: 9,11,6
 
 [running:loop]
@@ -54,6 +55,7 @@ right9: 4
 1: 9,11,6
 
 [running_left:in]
+speed:2
 1: 10,14,9
 
 [running_left:loop]
@@ -74,6 +76,7 @@ left14: 4
 1: 10,14,9
 
 [zombie:in]
+speed:9
 1: 13,1,1
 2: 13,7,1
 3: 11,10,6
@@ -94,6 +97,7 @@ right13: 3
 3: 13,1,1
 
 [zombie_left:in]
+speed:9
 1: 13,1,1
 2: 13,10,1
 3: 12,18,9
@@ -114,6 +118,7 @@ left21: 3
 3: 13,1,1
 
 [jump]
+speed:3
 1: 1,1,4
 2: 1,1,1
 3: 1,7,5 
@@ -157,6 +162,7 @@ down1: 2
 1: 1,7,1
 
 [silly]
+speed:30
 1: 8,1,1
 
 [dance:in]
@@ -214,6 +220,7 @@ down1: 2
 6: 11,1,1
 
 [wave_right:in]
+speed:3
 1: 1,3,1
 
 [wave_right:loop]
