Implement WDT, resolving #55.

--- a/main.cfg
+++ b/main.cfg
@@ -45,7 +45,7 @@ EUSCI_A1.eusciSPI.eusciSPIPin[3] = 1;
 EUSCI_A1.eusciSPI.eusciSPISBSel = EUSCI_A1.eusciSPIDefs.eSPI_MSB_FIRST;
 EUSCI_A1.eusciSPI.eusciSPIClockPhase = EUSCI_A1.eusciSPIDefs.eSPI_PHASE_DATA_CAPTURED_ONFIRST_CHANGED_ON_NEXT;
 CSL.device.vcc = 3.3;
-PMM.showUserModePage = false;
+PMM.showUserModePage = true;
 PinMux.regs.p2dir = 192;
 PinMux.regs.p2out = 0;
 EUSCI_A1.eusciSPI.eusciSPISTEMode = EUSCI_A1.eusciSPIDefs.SPISTEMode_1;
@@ -122,3 +122,6 @@ RTC_B.regs.interruptSource[2].interruptHandler = false;
 RTC_B.regs.interruptSource[2].interruptEnable = false;
 Timer1_A3.showExtClkSource = false;
 RTC_B.rtcCalendarEvent = RTC_B.RTC_CALENDAREVENT_MINUTECHANGE;
+WDT_A.watchdogMode = WDT_A.WatchdogMode;
+WDT_A.wdtClkDivider = WDT_A.WDT_CLOCKDIVIDER_32K;
+WDT_A.wdtClkSelect = WDT_A.WDT_CLOCKSOURCE_ACLK;
