--- a/img/all_frames.ini
+++ b/img/all_frames.ini
@@ -141,7 +141,7 @@ down: 2
 
 [exercise_1:loop]
 1: 13,7,4
-1: 13,1,1
+2: 13,1,1
 
 [exercise_1:out]
 1: 13,1,1
@@ -195,15 +195,17 @@ down: 2
 [bored_sad]
 1: 2,1,1
 
-[bored_yawn]
+[bored_yawn:in]
 1: 7,1,1
 2: 7,7,1
-3: 7,6,1
-4: 7,6,1
-5: 7,6,1
-6: 7,6,1
-7: 13,7,1
-8: 13,1,1
+
+[bored_yawn:loop]
+1: 7,6,1
+2: 7,6,1
+
+[bored_yawn:out]
+1: 13,7,1
+2: 13,1,1
 
 [bored_talk_to_hand]
 1: 11,1,1
@@ -222,6 +224,7 @@ down: 2
 
 [wave_right:out]
 1: 1,1,1
+
 [trapdoor_creator]
 1: 13,1,1
 2: 13,7,3
