--- a/img/all_frames.ini
+++ b/img/all_frames.ini
@@ -207,13 +207,17 @@ down: 2
 1: 13,7,1
 2: 13,1,1
 
-[bored_talk_to_hand]
+[bored_talk_to_hand:in]
 1: 11,1,1
 2: 11,19,1
+
+[bored_talk_to_hand:loop]
+1: 11,19,1
+2: 11,19,1
 3: 11,19,1
-4: 11,19,1
-5: 11,19,1
-6: 11,1,1
+
+[bored_talk_to_hand:out]
+1: 11,1,1
 
 [wave_right:in]
 1: 1,3,1
