--- a/main.cfg
+++ b/main.cfg
@@ -36,7 +36,7 @@ CS.csAclkSource = CS.CSA_LFXTCLK_SELECT;
 CS.csMclkSrcDivider = CS.CSA_CLOCK_DIVIDER_2;
 EUSCI_A1.eusciMode = EUSCI_A1.eusciBaseDefs.SPIMode;
 CS.csSmclkSrcDivider = CS.CSA_CLOCK_DIVIDER_2;
-EUSCI_A1.eusciSPI.eusciSPIBitRate = EUSCI_A1.eusciSPIDefs.SPIBitRate_7;
+EUSCI_A1.eusciSPI.eusciSPIBitRate = EUSCI_A1.eusciSPIDefs.SPIBitRate_Custom;
 EUSCI_A1.eusciSPI.eusciSPIPin[0] = 1;
 PinMux.regs.p2sel1 = 63;
 EUSCI_A1.eusciSPI.eusciSPIPin[2] = 1;
@@ -59,7 +59,7 @@ EUSCI_A1.eusciSPI.eusciSPICustomRate = 4000000;
 PinMux.regs.p3ren = 0;
 PinMux.regs.p3out = 0;
 EUSCI_A0.eusciMode = EUSCI_A0.eusciBaseDefs.SPIMode;
-EUSCI_A0.eusciSPI.eusciSPIBitRate = EUSCI_A0.eusciSPIDefs.SPIBitRate_7;
+EUSCI_A0.eusciSPI.eusciSPIBitRate = EUSCI_A0.eusciSPIDefs.SPIBitRate_Custom;
 EUSCI_A0.eusciSPI.eusciSPIPin[0] = 1;
 EUSCI_A0.eusciSPI.eusciSPIPin[1] = 1;
 EUSCI_A0.eusciSPI.eusciSPIPin[2] = 1;
@@ -72,7 +72,7 @@ EUSCI_B0.eusciMode = EUSCI_B0.eusciBaseDefs.SPIMode;
 EUSCI_B0.eusciSPI.eusciSPIPin[0] = 1;
 EUSCI_B0.eusciSPI.eusciSPIPin[1] = 1;
 EUSCI_B0.eusciSPI.eusciSPIPin[2] = 1;
-EUSCI_B0.eusciSPI.eusciSPIBitRate = EUSCI_B0.eusciSPIDefs.SPIBitRate_4;
+EUSCI_B0.eusciSPI.eusciSPIBitRate = EUSCI_B0.eusciSPIDefs.SPIBitRate_Custom;
 EUSCI_B0.eusciSPI.eusciSPISBSel = EUSCI_B0.eusciSPIDefs.eSPI_MSB_FIRST;
 EUSCI_B0.eusciSPI.eusciSPIClockPhase = EUSCI_B0.eusciSPIDefs.eSPI_PHASE_DATA_CAPTURED_ONFIRST_CHANGED_ON_NEXT;
 EUSCI_B0.regs.interruptSource[1].interruptEnable = false;
@@ -125,3 +125,5 @@ RTC_B.rtcCalendarEvent = RTC_B.RTC_CALENDAREVENT_MINUTECHANGE;
 WDT_A.watchdogMode = WDT_A.WatchdogMode;
 WDT_A.wdtClkDivider = WDT_A.WDT_CLOCKDIVIDER_32K;
 WDT_A.wdtClkSelect = WDT_A.WDT_CLOCKSOURCE_ACLK;
+EUSCI_A0.eusciSPI.eusciSPICustomRate = 4000000;
+EUSCI_B0.eusciSPI.eusciSPICustomRate = 4000000;
