Resync and add infants. Resolve #98.

--- a/img/frames.ini
+++ b/img/frames.ini
@@ -228,3 +228,26 @@ down: 2
 
 [wave_right:out]
 1: 1,1,1
+
+[infant_standing]
+1: 15,21,14
+
+[infant_moving]
+1: 15,22,14
+2: 15,21,14
+
+[infant_walk]
+1: 15,22,14
+right: 4
+2: 15,21,14
+
+[infant_walk_left]
+1: 15,22,14
+left: 4
+2: 15,21,14
+
+[infant_grow]
+up: 2
+1: 15,22,14
+up: 2
+2: 15,21,14
