--- a/img/play.ini
+++ b/img/play.ini
@@ -217,3 +217,15 @@ down: 2
 23: 1,7,5
 24: 1,7,5
 25: 1,7,5
+
+[infant_play]
+1: 15,21,14
+right: 4
+2: 15,22,14
+3: 15,21,14
+up: 4
+4: 15,23,14
+down: 4
+5: 15,21,14
+left: 4
+6: 15,22,14
