Integrity improvements to the RFM.

--- a/main.cfg
+++ b/main.cfg
@@ -72,7 +72,7 @@ EUSCI_B0.eusciMode = EUSCI_B0.eusciBaseDefs.SPIMode;
 EUSCI_B0.eusciSPI.eusciSPIPin[0] = 1;
 EUSCI_B0.eusciSPI.eusciSPIPin[1] = 1;
 EUSCI_B0.eusciSPI.eusciSPIPin[2] = 1;
-EUSCI_B0.eusciSPI.eusciSPIBitRate = EUSCI_B0.eusciSPIDefs.SPIBitRate_Custom;
+EUSCI_B0.eusciSPI.eusciSPIBitRate = EUSCI_B0.eusciSPIDefs.SPIBitRate_6;
 EUSCI_B0.eusciSPI.eusciSPISBSel = EUSCI_B0.eusciSPIDefs.eSPI_MSB_FIRST;
 EUSCI_B0.eusciSPI.eusciSPIClockPhase = EUSCI_B0.eusciSPIDefs.eSPI_PHASE_DATA_CAPTURED_ONFIRST_CHANGED_ON_NEXT;
 EUSCI_B0.regs.interruptSource[1].interruptEnable = false;
